--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,14 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
-    "@mui/icons-material": "^6.1.5",
+    "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.14",
