--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,8 @@
 FROM python:3.9-slim
 
-WORKDIR /app
+WORKDIR /src
 
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-COPY . /app
-
-EXPOSE 5000
-
-CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
+COPY . ./
