--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,6 @@
-FROM node:20-alpine
-
-WORKDIR /app
-
-COPY package.json ./
+FROM node:16-alpine
+WORKDIR /app/frontend
+COPY package.json ./package.json
+COPY package-lock.json ./package-lock.json
 RUN npm install
-
-COPY . .
-
-EXPOSE 3000
-
-CMD ["npm", "start"]
+COPY . ./
