--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,5 +44,6 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1"
-  }
+  },
+  "proxy": "http://boba-dev-backend:5000"
 }
