--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.5",
+    "@stytch/react": "^19.1.0",
+    "@stytch/vanilla-js": "^5.6.1",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
