--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,5 @@
 FROM python:3.9-slim
-
-WORKDIR /src
-
+WORKDIR /app/backend
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
-
 COPY . ./
