--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./backend:/app/backend
     environment:
-      - FLASK_APP=src:create_app 
+      - FLASK_APP=app.py 
       - FLASK_ENV=development 
     ports:
       - '5000:5000'
