--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM node:16-alpine as build
+FROM node:20-alpine as build
 
 WORKDIR /app/frontend
 COPY . ./
@@ -6,7 +6,7 @@ RUN npm install
 RUN npm run build
 
 FROM nginx:alpine
-COPY --from=build /app/client/build /usr/share/nginx/html
+COPY --from=build /app/frontend/build /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./nginx/nginx.conf /etc/nginx/conf.d
 
