--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.14",
     "web-vitals": "^2.1.4"
   },
