chat with proxy works

--- a/frontend/nginx/nginx-dev.conf
+++ b/frontend/nginx/nginx-dev.conf
@@ -3,17 +3,21 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Serve static files (React build)
     location / {
         try_files $uri $uri/ /index.html;
     }
 
     location /api {
-        # include proxy_params;
-        proxy_pass http://boba-backend:5000;
+        proxy_pass http://boba-dev-backend:5000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /socket.io {
-        proxy_pass http://boba-backend:5000;
+        proxy_pass http://boba-dev-backend:5000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
