--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@mui/material": "^6.1.5",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
-    "react-router-dom": "^6.27.0"
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "react-router-dom": "^6.27.0",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "jest": "^29.7.0"
