--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,12 +15,14 @@ services:
 
   react-frontend:
     container_name: boba-dev-frontend
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     volumes:
       - ./frontend:/app/frontend
     environment:
       - CHOKIDAR_USEPOLLING=true
       - NODE_ENV=development
     ports:
-      - '80:80'  # Expose port 80 for Nginx
-    command: ["nginx", "-g", "daemon off;"]  # Run Nginx instead of npm start
+      - '80:80'
+    command: ["nginx", "-g", "daemon off;"] 
