--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -8,7 +8,7 @@ RUN npm run build
 FROM nginx:alpine
 COPY --from=build /app/frontend/build /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf
-COPY ./nginx/nginx-dev.conf /etc/nginx/conf.d
+COPY ./nginx/nginx.conf /etc/nginx/conf.d
 
 EXPOSE 80
 
