--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,22 +17,28 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and run containers
+      - name: Build and start containers
         run: docker-compose -f docker-compose.yml up -d --build
 
       - name: Wait for services to be ready
         run: sleep 10
 
-      - name: Run pytest on backend container
+      - name: Run backend tests on boba-dev-backend container
         run: docker-compose -f docker-compose.yml exec flask-middleware pytest /app/backend/tests
 
-      - name: Run frontend test on frontend container
+      - name: Run frontend tests on boba-dev-frontend container
         run: docker-compose -f docker-compose.yml exec react-frontend npm test -- --watchAll=false
 
       - name: Tear down
