--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,16 +30,16 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and start containers
-        run: docker-compose -f docker-compose.yml up -d --build
+        run: docker-compose -f docker-compose.dev.yml up -d --build
 
       - name: Wait for services to be ready
         run: sleep 10
 
       - name: Run backend tests on boba-dev-backend container
-        run: docker-compose -f docker-compose.yml exec flask-middleware pytest /app/backend/tests
+        run: docker-compose -f docker-compose.dev.yml exec flask-middleware pytest /app/backend/tests
 
       - name: Run frontend tests on boba-dev-frontend container
-        run: docker-compose -f docker-compose.yml exec react-frontend npm test -- --watchAll=false
+        run: docker-compose -f docker-compose.de.yml exec react-frontend npm test -- --watchAll=false
 
       - name: Tear down
-        run: docker-compose -f docker-compose.yml down
+        run: docker-compose -f docker-compose.dev.yml down
