--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,10 +32,11 @@ jobs:
       - name: Build and start containers
         run: docker-compose -f docker-compose.dev.yml up -d --build
 
-      - name: Wait for backend service to be ready
+      - name: Set environment variables for Flask
         run: |
-          docker-compose -f docker-compose.dev.yml exec -T flask-middleware /bin/bash -c 'while ! nc -z localhost 5000; do sleep 1; done'
-
+          echo "FLASK_APP=app.py" >> $GITHUB_ENV
+          echo "FLASK_ENV=development" >> $GITHUB_ENV
+          
       - name: Run tests on boba-dev-backend container
         run: docker-compose -f docker-compose.dev.yml exec -T flask-middleware pytest /app/backend/test/
 
