--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,8 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
+      - name: Set up Docker Compose
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -36,6 +33,9 @@ jobs:
         run: |
           echo "FLASK_APP=app.py" >> $GITHUB_ENV
           echo "FLASK_ENV=development" >> $GITHUB_ENV
+          
+      - name: Check Docker Compose status
+        run: docker-compose -f docker-compose.dev.yml ps
           
       - name: Run tests on boba-dev-backend container
         run: docker-compose -f docker-compose.dev.yml exec -T flask-middleware pytest /app/backend/test/
