--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+cryptography --only-binary :all:
 blinker==1.8.2
 click==8.1.7
 Flask==2.2.2
@@ -11,7 +12,7 @@ SQLAlchemy==2.0.35
 Flask-SQLAlchemy
 Flask-Cors
 Flask-SocketIO
-stytch==5.0.0
+stytch
 boto3
 gunicorn
 pytest
