Move keys to .env file

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
 STYTCH_PROJECT_ID=project-test-181121a8-92b0-45c3-b66b-0d3c68e5671f
 STYTCH_SECRET=secret-test-JVDic2NDe7HdH-gS9pEF2k_KrfLRZZHZzlI=
+AWS_ACCESS_KEY_ID=AKIASDRANCKCVV52NGGU
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-east-2
+AWS_BUCKET_NAME=uoftmarketplacebucket
